Adding practice to beginning of task

--- a/index.html
+++ b/index.html
@@ -11,12 +11,14 @@
     <div class="d-flex align-items-center flex-column justify-content-center h-100" id="header">
         <h1 class="display-4">Two-Armed Bandit Task</h1>
         <form>
+            <!--
             <div class="form-group">
                 <input class="btn btn-info btn-lg btn-block" type="button" onclick="location.href='./practice/practice.html';"value="Practice"/>
 
             </div>
+            -->
             <div class="form-group">
-                <input class="btn btn-info btn-lg btn-block" type="button" onclick="location.href='./task/task.html';" value="Task" />
+                <input class="btn btn-info btn-lg btn-block" type="button" onclick="location.href='./practice/practice.html';" value="Task" />
             </div>
         </form>
     </div>
