Added another option to radio button for stim on/off as N/A

--- a/index.html
+++ b/index.html
@@ -59,7 +59,9 @@
 
                     <label class="h3" for="gender">Is your deep brain stimulator currently on?</label>
                     <br>
-                    <input type="radio" name="yes_no" value="stimOn" checked> Yes
+                    <input type="radio" name="yes_no" value="N/A" checked> N/A
+                    <br>
+                    <input type="radio" name="yes_no" value="stimOn"> Yes
                     <br><br>
                     <input type="radio" name="yes_no" value="stimOff" > No
                 </form>
