Changed arms to be 4 instead of 2

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     else{
                         let myData = [ userName, medicationDateTime, stimOnOff ];
                         localStorage.setItem( 'objectToPass', myData );
-                        location.href='./practice/practice.html';
+                        location.href='./task/task.html';
                     }
                 }
             </script>
